# Emuchip8

./: CMakeLists.txt  README.md  install_sdl2.ps1  install_sdl2.sh
Emuchip8/: CMakeLists.txt  Chip8.cpp  Emuchip8.cpp  Emuchip8.h  main.cpp
Emuchip8/include/: Chip8.cpp  Chip8.h  Platform.h
